# moa

./: .dockerignore  .gitignore  .graphifyignore  AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md  architecture.md  docker-compose.yml  e2e_test_plan.md  findings.md  fly.toml  index.html  package.json  pnpm-lock.yaml  progress.md  sequence-diagrams.md  task_plan.md  vite.config.ts
crates/moa-brain/: Cargo.toml
crates/moa-brain/examples/: chat_harness.rs
crates/moa-brain/src/: compaction.rs  lib.rs  loop_detector.rs  tool_stats.rs
crates/moa-brain/tests/: brain_turn.rs  cohere_reranker_live.rs  hybrid_retrieval.rs  integration_steps_72_77.rs  live_cache_audit.rs  live_harness.rs  query_planner.rs  query_rewrite_live.rs  stable_prefix.rs  turbopuffer_news_e2e.rs
crates/moa-cli/: Cargo.toml
crates/moa-cli/src/: daemon.rs  exec.rs  main.rs
crates/moa-desktop/: Cargo.toml  DESIGN.md
crates/moa-desktop/src/: notifications.rs  titlebar.rs
crates/moa-eval/: Cargo.toml
crates/moa-eval/examples/: example-config-baseline.toml  example-config-variant.toml  example-suite.toml
crates/moa-eval/src/: collector.rs  error.rs  evaluator.rs  lib.rs  loader.rs  plan.rs  replay.rs  setup.rs
crates/moa-eval/tests/: cross_tenant_pentest.rs  engine_live.rs  evaluators.rs  golden_e2e.rs
crates/moa-hands/: Cargo.toml
crates/moa-hands/src/: local.rs  mcp.rs
crates/moa-loadtest/: Cargo.toml
crates/moa-memory-ingest/: Cargo.toml
crates/moa-orchestrator-local/: Cargo.toml
crates/moa-runtime/: Cargo.toml
crates/moa-security/: Cargo.toml
moa-brain/: Cargo.toml
moa-brain/assets/: ner-gazetteer.txt
moa-brain/examples/: chat_harness.rs
moa-brain/src/: compaction.rs  harness.rs  lib.rs  loop_detector.rs  tool_stats.rs  turn.rs
moa-brain/tests/: brain_turn.rs  cohere_reranker_live.rs  hybrid_retrieval.rs  integration_steps_72_77.rs  live_cache_audit.rs  live_harness.rs  query_rewrite_live.rs  stable_prefix.rs
moa-cli/: Cargo.toml
moa-cli/src/: api.rs  daemon.rs  exec.rs  main.rs
moa-cli/tests/: tui_workflows.rs
moa-core/: Cargo.toml
moa-core/src/: analytics.rs  broadcast_recv.rs  config.rs  daemon.rs  db.rs  error.rs  events.rs  lib.rs  runtime_metrics.rs  session_replay.rs  shell.rs  telemetry.rs  traits.rs  truncation.rs  turn_latency.rs  types.rs  workspace.rs
moa-core/tests/: scope.rs
moa-desktop/: Cargo.toml  DESIGN.md  README.md
moa-desktop/src/: actions.rs  app.rs  density.rs  keybindings.rs  main.rs  statusbar.rs  theme.rs  theme_tokens.rs  titlebar.rs  tray.rs  wcag.rs  window_state.rs
moa-desktop/tests/: settings_integration.rs
moa-eval/: Cargo.toml
moa-eval/examples/: example-skill-suite.toml
moa-eval/src/: collector.rs  engine.rs  error.rs  lib.rs  loader.rs  reporter.rs  results.rs  setup.rs  types.rs
moa-eval/tests/: loader.rs  reporters.rs
moa-gateway/: Cargo.toml
moa-gateway/src/: approval.rs  discord.rs  lib.rs  renderer.rs  slack.rs  telegram.rs
moa-hands/: Cargo.toml
moa-hands/src/: daytona.rs  e2b.rs  lib.rs  local.rs  mcp.rs  router.rs
moa-hands/tests/: daytona_live.rs  docker_hardening.rs  e2b_live.rs  local_tools.rs  mcp_router.rs
moa-loadtest/: Cargo.toml
moa-loadtest/src/: lib.rs  main.rs
moa-memory/: Cargo.toml
moa-memory-graph/: Cargo.toml
moa-memory-graph/src/: age.rs  changelog.rs  cypher.rs  error.rs  lexical.rs  lib.rs  node.rs  read.rs  write.rs
moa-memory-graph/tests/: changelog_outbox.rs  node_index.rs  read_smoke.rs  write_protocol.rs
moa-memory-ingest/: Cargo.toml
moa-memory-ingest/prompts/: judge.txt
moa-memory-ingest/src/: chunking.rs  connector.rs  error.rs  extract.rs  fast_path.rs  lib.rs  slow_path.rs
moa-memory-ingest/tests/: cohere_reranker_live.rs  fast_path.rs
moa-memory/migrations/: 001_wiki_pages.sql  002_wiki_embeddings.sql
moa-memory/src/: bootstrap.rs  branching.rs  consolidation.rs  fts.rs  index.rs  ingest.rs  lib.rs  schema.rs  search.rs  wiki.rs
moa-memory/tests/: maintenance.rs  memory_store.rs
moa-orchestrator/: Cargo.toml
moa-orchestrator/examples/: temporal_worker_helper.rs
moa-orchestrator/migrations/: 001_sessions.sql  002_partitioning.sql
moa-orchestrator/scripts/: local-smoke.sh
moa-orchestrator/src/: brain_bridge.rs  config.rs  ctx.rs  fast_path.rs  ingestion_vo.rs  lib.rs  local.rs  main.rs  observability.rs  restate_register.rs  runtime.rs  session_engine.rs  sub_agent_dispatch.rs  temporal.rs
moa-orchestrator/tests/: consolidate.rs  fast_path.rs  ingestion_e2e.rs  integration.rs  live_observability.rs  live_provider_roundtrip.rs  llm_gateway.rs  llm_gateway_e2e.rs  local_orchestrator.rs  prometheus_metrics.rs  session_store.rs  session_vo.rs  temporal_orchestrator.rs  tool_executor.rs
moa-providers/: Cargo.toml
moa-providers/src/: anthropic.rs  common.rs  embedding.rs  factory.rs  gemini.rs  instrumentation.rs  lib.rs  models.rs  openai.rs  openai_responses.rs  openrouter.rs  provider_tools.rs  retry.rs  schema.rs  scripted.rs  sse.rs
moa-providers/tests/: anthropic_live.rs  anthropic_provider.rs  gemini_live.rs  live_provider_matrix.rs  openai_live.rs  openai_provider.rs  openrouter_live.rs
moa-runtime/: Cargo.toml
moa-runtime/src/: daemon.rs  daemon_ipc.rs  helpers.rs  lib.rs  local.rs
moa-runtime/tests/: age_smoke.rs
moa-security/: Cargo.toml
moa-security/src/: injection.rs  lib.rs  mcp_proxy.rs  policies.rs  vault.rs
moa-session/: Cargo.toml
moa-session/src/: backend.rs  blob.rs  lib.rs  listener.rs  neon.rs  postgres.rs  queries.rs  queries_postgres.rs  queries_turso.rs  schema.rs  schema_postgres.rs  schema_turso.rs  store.rs  testing.rs  turso.rs
moa-session/tests/: neon_branch_manager.rs  postgres_store.rs  session_store.rs  turso_live.rs
moa-skills/: Cargo.toml
moa-skills/src/: distiller.rs  format.rs  improver.rs  lib.rs  registry.rs  regression.rs
moa-skills/tests/: skills.rs
moa-tui/: Cargo.toml
moa-tui/src/: app.rs  keybindings.rs  lib.rs  main.rs  runner.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  dto.rs  error.rs  lib.rs  main.rs  stream.rs  tray.rs
(+1001 files in other folders)
