[package]
name = "moa-workspace"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "src/lib.rs"

[features]
default = ["tui"]
tui = []
telegram = []
slack = []
discord = []
cloud = []
temporal = []

[workspace]
resolver = "2"
members = [
    "moa-core",
    "moa-brain",
    "moa-session",
    "moa-memory",
    "moa-hands",
    "moa-providers",
    "moa-orchestrator",
    "moa-gateway",
    "moa-tui",
    "moa-cli",
    "moa-security",
    "moa-skills",
]
default-members = [
    "moa-core",
    "moa-brain",
    "moa-session",
    "moa-memory",
    "moa-hands",
    "moa-providers",
    "moa-orchestrator",
    "moa-gateway",
    "moa-tui",
    "moa-cli",
    "moa-security",
    "moa-skills",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
config = { version = "0.14", default-features = true, features = ["toml"] }
crossterm = "0.28"
eventsource-stream = "0.2"
futures-util = "0.3"
ratatui = "0.29"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tui-textarea = "0.7"
uuid = { version = "1", features = ["serde", "v4"] }
