[package]
name = "moa-workspace"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
moa-session = { path = "moa-session", optional = true }

[features]
default = []
telegram = []
slack = []
discord = []
cloud = []
temporal = []
daytona = []
e2b = []
postgres = ["moa-session/postgres"]

[workspace]
resolver = "2"
members = [
    "moa-core",
    "moa-brain",
    "moa-session",
    "moa-memory",
    "moa-hands",
    "moa-providers",
    "moa-orchestrator",
    "moa-gateway",
    "moa-runtime",
    "moa-cli",
    "moa-security",
    "moa-skills",
    "moa-eval",
    "src-tauri",
]
default-members = [
    "moa-core",
    "moa-brain",
    "moa-session",
    "moa-memory",
    "moa-hands",
    "moa-providers",
    "moa-orchestrator",
    "moa-gateway",
    "moa-runtime",
    "moa-cli",
    "moa-security",
    "moa-skills",
    "moa-eval",
    "src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
async-openai = { version = "0.34", default-features = false, features = [
    "responses",
    "rustls",
] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
config = { version = "0.14", default-features = true, features = ["toml"] }
eventsource-stream = "0.2"
futures-util = "0.3"
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["trace", "grpc-tonic", "http-proto", "reqwest-rustls"] }
opentelemetry_sdk = "0.31"
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "multipart",
    "rustls",
    "stream",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ts-rs = { version = "10", features = ["chrono-impl", "serde-compat", "serde-json-impl", "uuid-impl"] }
uuid = { version = "1", features = ["serde", "v4"] }

[profile.dev]
# 1 = Line tables only. Enough for AI to see "Error at main.rs:42"
# This is the single biggest space saver.
debug = 1

# Speed up the linker by keeping debug info in separate files 
# (Works on macOS and Linux).
split-debuginfo = "unpacked"

# Optional: If your code is heavy on dependencies, level 1 
# makes the AI's "test/run" cycles much faster.
opt-level = 1

[profile.release]
# Strip all symbols from the final production binary.
strip = "symbols"
# Use 'thin' LTO to keep the binary small without the 
# massive compile time of 'fat' LTO.
lto = "thin"
# No debug info needed for release.
debug = 0
