[package]
name = "moa-brain"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
moa-core = { path = "../moa-core" }
moa-hands = { path = "../moa-hands" }
moa-security = { path = "../moa-security" }
moa-skills = { path = "../moa-skills" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
uuid.workspace = true

[dev-dependencies]
moa-memory = { path = "../moa-memory" }
moa-providers = { path = "../moa-providers" }
moa-session = { path = "../moa-session" }
tempfile = "3"
