[package]
name = "moa-brain"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
moa-core = { path = "../moa-core" }
moa-hands = { path = "../moa-hands" }
moa-memory-graph = { path = "../moa-memory-graph" }
moa-memory-vector = { path = "../moa-memory-vector" }
moa-providers = { path = "../moa-providers" }
moa-session = { path = "../moa-session" }
moa-security = { path = "../moa-security" }
async-trait.workspace = true
reqwest.workspace = true
secrecy = "0.10"
serde.workspace = true
serde_json.workspace = true
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "json"] }
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
uuid.workspace = true

[dev-dependencies]
moa-memory = { path = "../moa-memory" }
moa-providers = { path = "../moa-providers", features = ["test-util"] }
moa-session = { path = "../moa-session" }
proptest = "1"
tempfile = "3"
tracing-subscriber.workspace = true
