[package]
name = "moa-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "moa"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
moa-core = { path = "../moa-core" }
moa-tui = { path = "../moa-tui" }
tokio.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
expectrl = "0.7"
tempfile = "3"
