[package]
name = "moa-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
cloud = ["temporal"]
temporal = ["dep:moa-orchestrator", "moa-orchestrator/temporal"]

[[bin]]
name = "moa"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
libc = "0.2"
moa-core = { path = "../moa-core" }
moa-memory = { path = "../moa-memory" }
moa-orchestrator = { path = "../moa-orchestrator", optional = true }
moa-session = { path = "../moa-session" }
moa-tui = { path = "../moa-tui" }
serde_json.workspace = true
tokio.workspace = true
toml = "0.8"
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
expectrl = "0.7"
tempfile = "3"
