[package]
name = "moa-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
cloud = ["temporal"]
temporal = ["moa-orchestrator/temporal"]

[[bin]]
name = "moa"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-stream = "0.3"
axum = "0.8"
chrono.workspace = true
clap.workspace = true
futures-util.workspace = true
libc = "0.2"
moa-core = { path = "../moa-core" }
moa-eval = { path = "../moa-eval" }
moa-memory = { path = "../moa-memory" }
moa-orchestrator = { path = "../moa-orchestrator" }
moa-session = { path = "../moa-session" }
moa-tui = { path = "../moa-tui" }
serde_json.workspace = true
tokio.workspace = true
toml = "0.8"
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
async-trait.workspace = true
expectrl = "0.7"
reqwest.workspace = true
tempfile = "3"
