[package]
name = "moa-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
config.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
shell-words = "1.1"
similar.workspace = true
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml = "0.8"
tracing.workspace = true
tracing-appender.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
