[package]
name = "moa-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
telegram = ["dep:teloxide"]

[dependencies]
moa-core = { path = "../moa-core" }
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
teloxide = { version = "0.17", default-features = false, features = ["ctrlc_handler", "rustls"], optional = true }

[dev-dependencies]
serde_json.workspace = true
