[package]
name = "moa-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
discord = ["dep:serenity"]
telegram = ["dep:teloxide"]
slack = ["dep:slack-morphism"]

[dependencies]
moa-core = { path = "../moa-core" }
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
teloxide = { version = "0.17", default-features = false, features = ["ctrlc_handler", "rustls"], optional = true }
slack-morphism = { version = "2.19.0", features = ["hyper"], optional = true }
serenity = { version = "0.12.5", default-features = false, features = ["builder", "client", "gateway", "http", "model", "rustls_backend"], optional = true }

[dev-dependencies]
serde_json.workspace = true
