[package]
name = "moa-memory-graph"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
moa-core = { path = "../moa-core" }
serde.workspace = true
serde_json.workspace = true
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "json", "macros"] }
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
moa-session = { path = "../moa-session" }
tokio.workspace = true
