[package]
name = "moa-memory-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
moa-core = { path = "../moa-core" }
moa-memory-pii = { path = "../moa-memory-pii" }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
