[package]
name = "moa-memory"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
moa-core = { path = "../moa-core" }
regex = "1"
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
moa-session = { path = "../moa-session" }
tempfile = "3"
