[package]
name = "moa-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
moa-brain = { path = "../moa-brain" }
moa-core = { path = "../moa-core" }
moa-hands = { path = "../moa-hands" }
moa-memory = { path = "../moa-memory" }
moa-providers = { path = "../moa-providers" }
moa-session = { path = "../moa-session" }
moa-skills = { path = "../moa-skills" }
serde_json.workspace = true
shell-words = "1.1"
tokio.workspace = true
tokio-cron-scheduler = "0.13"
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
