[package]
name = "moa-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "moa-orchestrator"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum = "0.8"
chrono.workspace = true
clap.workspace = true
futures = { version = "0.3" }
futures-util.workspace = true
metrics.workspace = true
moa-brain = { path = "../moa-brain" }
moa-core = { path = "../moa-core" }
moa-hands = { path = "../moa-hands" }
moa-memory = { path = "../moa-memory" }
moa-memory-graph = { path = "../moa-memory-graph" }
moa-memory-ingest = { path = "../moa-memory-ingest" }
moa-memory-pii = { path = "../moa-memory-pii" }
moa-memory-vector = { path = "../moa-memory-vector" }
moa-providers = { path = "../moa-providers" }
moa-security = { path = "../moa-security" }
moa-session = { path = "../moa-session" }
opentelemetry.workspace = true
restate-sdk.workspace = true
reqwest.workspace = true
secrecy = "0.10"
serde.workspace = true
serde_json.workspace = true
shell-words = "1.1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "migrate", "json", "uuid", "chrono"] }
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
tracing-subscriber.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }
