[package]
name = "moa-providers"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-openai.workspace = true
async-trait.workspace = true
chrono.workspace = true
moa-core = { path = "../moa-core" }
eventsource-stream.workspace = true
futures-util.workspace = true
opentelemetry.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
