[package]
name = "moa-session"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
moa-core = { path = "../moa-core" }
moa-security = { path = "../moa-security" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "migrate", "macros", "json", "uuid", "chrono"] }
tokio.workspace = true
tracing.workspace = true
url = "2"
uuid.workspace = true
hex = "0.4"

[dev-dependencies]
axum = "0.8"
tempfile = "3"
