[package]
name = "moa-skills"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
moa-core = { path = "../moa-core" }
moa-memory = { path = "../moa-memory" }
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
async-trait.workspace = true
tempfile = "3"
uuid.workspace = true
