[package]
name = "moa-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
crossterm.workspace = true
moa-brain = { path = "../moa-brain" }
moa-core = { path = "../moa-core" }
moa-hands = { path = "../moa-hands" }
moa-memory = { path = "../moa-memory" }
moa-providers = { path = "../moa-providers" }
moa-session = { path = "../moa-session" }
ratatui.workspace = true
shell-words = "1.1"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tui-textarea.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
