[package]
name = "moa-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
crossterm.workspace = true
moa-core = { path = "../moa-core" }
moa-runtime = { path = "../moa-runtime" }
nucleo.workspace = true
pulldown-cmark = "0.12"
ratatui.workspace = true
serde_json.workspace = true
shell-words = "1.1"
similar.workspace = true
syntect.workspace = true
tokio.workspace = true
toml = "0.8"
tracing.workspace = true
tracing-subscriber.workspace = true
tui-textarea.workspace = true
uuid.workspace = true

[dev-dependencies]
moa-memory = { path = "../moa-memory" }
moa-session = { path = "../moa-session" }
tempfile = "3"
