[package]
name = "moa-app"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "moa_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono.workspace = true
moa-core = { path = "../moa-core" }
moa-runtime = { path = "../moa-runtime" }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
tauri = { version = "2", features = [] }
serde.workspace = true
serde_json.workspace = true
