[package]
name = "moa-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "moa"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-stream = "0.3"
axum = "0.8"
chrono.workspace = true
clap.workspace = true
futures-util.workspace = true
libc = "0.2"
moa-core = { path = "../moa-core" }
moa-eval = { path = "../moa-eval" }
moa-brain = { path = "../moa-brain" }
moa-memory-graph = { path = "../moa-memory-graph" }
moa-memory-ingest = { path = "../moa-memory-ingest" }
moa-memory-vector = { path = "../moa-memory-vector" }
moa-orchestrator-local = { path = "../moa-orchestrator-local" }
moa-runtime = { path = "../moa-runtime" }
moa-session = { path = "../moa-session" }
moa-skills = { path = "../moa-skills" }
reqwest.workspace = true
serde_json.workspace = true
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres"] }
tokio.workspace = true
toml = "0.8"
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
async-trait.workspace = true
expectrl = "0.7"
tempfile = "3"
