[package]
name = "moa-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "moa-desktop"
path = "src/main.rs"

[dependencies]
gpui = "0.2"
gpui-component = "0.5"
tray-icon = "0.21"

moa-core = { path = "../moa-core" }
moa-providers = { path = "../moa-providers" }
moa-runtime = { path = "../moa-runtime" }

anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
