[package]
name = "moa-eval"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
langfuse = ["dep:reqwest"]

[dependencies]
async-trait.workspace = true
chrono.workspace = true
futures-util.workspace = true
moa-brain = { path = "../moa-brain" }
moa-core = { path = "../moa-core" }
moa-hands = { path = "../moa-hands" }
moa-providers = { path = "../moa-providers" }
moa-security = { path = "../moa-security" }
moa-session = { path = "../moa-session" }
opentelemetry.workspace = true
regex = "1"
reqwest = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "json"] }
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
