[package]
name = "moa-hands"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
daytona = []
e2b = []

[dependencies]
async-trait.workspace = true
base64 = "0.22"
chrono.workspace = true
futures-util.workspace = true
globset = "0.4"
ignore = "0.4"
moa-core = { path = "../moa-core" }
moa-memory-ingest = { path = "../moa-memory/ingest" }
moa-security = { path = "../moa-security" }
opentelemetry.workspace = true
regex = "1"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
shell-words = "1.1"
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
uuid.workspace = true

[dev-dependencies]
moa-session = { path = "../moa-session" }
tempfile = "3"
